добавлен полезный запрос